--- a/style.css
+++ b/style.css
@@ -11,3 +11,108 @@ h1 {
     color: rgb(15, 15, 90);
  }
 
+ 
+
+
+.nav-link{
+    color: #250A66;
+    font-family: 'Reenie Beanie', cursive;
+    font-size: 30px;
+    margin-left: 40px;
+}
+
+.nav-link:hover{
+    color:#9AC2C5;
+    color:rgb(105, 114, 187);
+}
+
+
+
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: #E8EDC3 ;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 2.5s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #9AC2C5;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 1.5s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color:rgb(105, 114, 187);
+  }
+  
+  /* Fading animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 2.5s;
+    animation-name: fade;
+    animation-duration: 2.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px){
+    .prev .next{
+        font-size:11px;}
+    } 
+
+    footer { position: sticky }
+footer {
+    text-align: center;
+    padding: 3px;
+    background-color: #9AC2C5;
+    color:#9AC2C5 ;
+}
+    
