--- a/style.css
+++ b/style.css
@@ -12,16 +12,14 @@ h1 {
  }
 
 
+/*------Navbar-------*/
 
 .nav-link{
     color: #250A66;
     font-family: 'Reenie Beanie', cursive;
     font-size: 30px;
+    margin-right: 30px;
 }
-
-ul {
-  padding: 15px;
-} 
 
 .nav-link:hover{
     color:#9AC2C5;
@@ -29,30 +27,32 @@ ul {
 }
 
 .navbar-nav{
-  margin-left:90px ;
+  margin-left:120px ;
+  padding:12px;
 }
 
 .nav-item-2{
   margin-left: 800px;
 }
 
-.fab{
-  font-size: xx-large;
-}
+/*------End of Navbar-------*/
+
+
+
+/*-------Carousel------*/
 
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
 img {vertical-align: middle;}
 
-/* Slideshow container */
 .slideshow-container {
     max-width: 1000px;
     position: relative;
     margin: auto;
+    animation:infinite;
   }
   
-  /* Next & previous buttons */
   .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -63,24 +63,20 @@ img {vertical-align: middle;}
     color: #E8EDC3 ;
     font-weight: bold;
     font-size: 20px;
-    transition: 2.5s ease;
+    transition:all;
     border-radius: 0 3px 3px 0;
     user-select: none;
   }
   
-  /* Position the "next button" to the right */
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
   
-  /* On hover, add a black background color with a little bit see-through */
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
   
-  
-  /* The dots/bullets/indicators */
   .dot {
     cursor: pointer;
     height: 10px;
@@ -96,12 +92,11 @@ img {vertical-align: middle;}
     background-color:rgb(105, 114, 187);
   }
   
-  /* Fading animation */
   .fade {
     -webkit-animation-name: fade;
-    -webkit-animation-duration: 2.5s;
+    -webkit-animation-duration: 2.5;
     animation-name: fade;
-    animation-duration: 2.5s;
+    animation-duration: 2.5;
   }
   
   @-webkit-keyframes fade {
@@ -114,11 +109,13 @@ img {vertical-align: middle;}
     to {opacity: 1}
   }
   
-  /* On smaller screens, decrease text size */
+  /* Responsiveness*/
   @media only screen and (max-width: 300px){
     .prev .next{
         font-size:11px;}
     } 
+
+/*-------Footer------*/
 
     footer { position: sticky }
 footer {
@@ -127,4 +124,28 @@ footer {
     background-color: #9AC2C5;
     color:#9AC2C5 ;
 }
+
+.fab{
+  font-size: xx-large;
+}
     
+/*-----End of Footer-----*/
+
+
+
+
+
+
+h1 {
+  background-color: #E8EDC3;
+}
+
+h1 {
+  color: red;
+  margin-left: 20px;
+}
+
+p {
+  color: rgb(15, 15, 90);
+}
+
