--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@
 /*------End of Navbar-------*/
 
 .jumbotron-image {
+  width: 100%;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
