--- a/style.css
+++ b/style.css
@@ -82,3 +82,9 @@ footer {
 }
     
 /*-----End of Footer-----*/
+
+
+.form-signup {
+  font-family: 'Reenie Beanie', cursive;
+  font-size: 29px;
+}
